workspaces/diff-engine/src/learn_shape/snapshots/optic_diff_engine__learn_shape__result__test__trail_observations_can_generate_commands_for_primitive_bodies__string_results.snap
---
source: workspaces/diff-engine/src/learn_shape/result.rs
expression: "&string_results"
---
(
    Some(
        "test-id-0",
    ),
    [
        ShapeCommand(
            AddShape(
                AddShape {
                    shape_id: "test-id-0",
                    base_shape_id: "$string",
                    name: "",
                },
            ),
        ),
    ],
)
